src/objects/pse__Assignment_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>pse__Adjust_Hours_Strategy_Respects_Holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is true, then Schedules created by &quot;Adjust Hours Per Day&quot; will respect holidays and create exceptions for them and adjust hours by spreading hours across other days.</description>
        <inlineHelpText>If it is true, then Schedules created by &quot;Adjust Hours Per Day&quot; will respect holidays and create exceptions for them and adjust hours by spreading hours across other days.</inlineHelpText>
        <label>Adjust Hours Strategy Respects Holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Adjust_Sched_Date_on_Assignment_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated - not used</description>
        <inlineHelpText>Deprecated - not used</inlineHelpText>
        <label>Adjust Sched Date on Assignment Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Resource_Currency_on_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the cost rate currency code on an assignment is set to use the resource currency code.</description>
        <inlineHelpText>If selected, the cost rate currency code on an assignment is set to use the resource currency code.</inlineHelpText>
        <label>Allow Resource Currency Code on Assn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__AssigRes_IsResource_Active_Lookup_FIlter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssigRes IsResource Active Lookup FIlter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__AssigRes_Is_Resource_Lookup_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssigRes Is Resource Lookup Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assign_Resource_Custom_Lookup_Columns__c</fullName>
        <defaultValue>&apos;Name,Account.Name,Is_Resource__c,Is_Resource_Active__c,Resource_Role__c&apos;</defaultValue>
        <label>Assign Resource Custom Lookup Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assign_Resource_Custom_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Resource Custom Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assign_Resource_Milestone_Lookup_Columns__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>Field to hold the comma separated list field api names that will displayed as column in milestone lookup popup.</description>
        <inlineHelpText>Field to hold the comma separated list field api names that will displayed as column in milestone lookup popup.</inlineHelpText>
        <label>Assign Resource Milestone Lookup Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assign_Resource_Milestone_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to control display of custom milestone lookup on UI</description>
        <inlineHelpText>Field to control display of custom milestone lookup on UI</inlineHelpText>
        <label>Assign Resource Milestone Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assign_Resource_Milestone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark custom milestone as required or not. If true, it is will be required and else not.</description>
        <inlineHelpText>Field to mark custom milestone as required or not. If true, it is will be required and else not.</inlineHelpText>
        <label>Assign Resource Milestone Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Closed_Statuses__c</fullName>
        <defaultValue>&apos;Closed&apos;</defaultValue>
        <description>Deprecated - not used</description>
        <inlineHelpText>Deprecated - not used</inlineHelpText>
        <label>Assignment Closed Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Name_Project_Name_Max_Length__c</fullName>
        <defaultValue>38</defaultValue>
        <description>Configuration of Max-Length of Project Name in auto generated Assignment Name.</description>
        <inlineHelpText>Configuration of Max-Length of Project Name in auto generated Assignment Name.</inlineHelpText>
        <label>Assignment Name Project Name Max Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Name_Resource_Name_Max_Length__c</fullName>
        <defaultValue>38</defaultValue>
        <description>Configuration of Max-Length of Resource Name in auto generated Assignment Name.</description>
        <inlineHelpText>Configuration of Max-Length of Resource Name in auto generated Assignment Name.</inlineHelpText>
        <label>Assignment Name Resource Name Max Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Auto_Share_with_New_Resource__c</fullName>
        <description>Defines whether to share an assignment and schedule with the resource&apos;s Salesforce user on creation or when the resource is changed. You can set the value to Read or Edit to define the level of sharing. If no value is set, no action is taken.</description>
        <inlineHelpText>Defines whether to share an assignment and schedule with the resource&apos;s Salesforce user on creation or when the resource is changed. You can set the value to Read or Edit to define the level of sharing. If no value is set, no action is taken.</inlineHelpText>
        <label>Auto Share with New Resource</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Delete_Share_from_Old_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether the existing share of the assignment and schedule with the resource&apos;s Salesforce user is deleted when the resource on the assignment is changed.</description>
        <inlineHelpText>Defines whether the existing share of the assignment and schedule with the resource&apos;s Salesforce user is deleted when the resource on the assignment is changed.</inlineHelpText>
        <label>Delete Share from Old Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Disable_Bill_Rate_Null_Check_in_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When selected, PSA does not check that bill rates have been applied.</description>
        <inlineHelpText>When selected, PSA does not check that bill rates have been applied.</inlineHelpText>
        <label>Disable Bill Rate Null Check in Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Disable_RPG_Role_Defaulting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the default values for the Region, Practice, Group, and Role filters on the Assign Resource page.</description>
        <inlineHelpText>Disables the default values for the Region, Practice, Group, and Role filters on the Assign Resource page.</inlineHelpText>
        <label>Disable RPG and Role Filter Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Display_Planned_Bill_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to display the Planned Bill Rate field on the Mass Assign Resources page.</inlineHelpText>
        <label>Display Planned Bill Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Edit_Schedule_Default_Strategy__c</fullName>
        <defaultValue>&apos;ignore&apos;</defaultValue>
        <description>The default scheduling strategy for the Edit Assignment Schedule page. Possible values are &quot;level&quot;, &quot;ignore&quot;, &quot;day&quot; and &apos;&apos;PercentAllocation&quot; for &quot;Calculate End Date, Level Schedule&quot;, &quot;Calculate End Date, Ignore Availability&quot;, &quot;Adjust Hours Per Day&quot; and &quot;Percent Allocation&quot; respectively</description>
        <inlineHelpText>The default scheduling strategy for the Edit Assignment Schedule page. Possible values are &quot;level&quot;, &quot;ignore&quot;, &quot;day&quot; and &apos;&apos;PercentAllocation&quot;</inlineHelpText>
        <label>Edit Schedule Default Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Adjust_Hours_Scheduling_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Adjust Hours Per Day scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</description>
        <inlineHelpText>Indicates whether the Adjust Hours Per Day scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
        <label>Hide Adjust Hours Scheduling Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Custom_Scheduling_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Custom Scheduling Strategy is hidden on the Assign Resource to Project and Staffer Worksheet pages.</description>
        <inlineHelpText>Indicates whether the Custom Scheduling Strategy is hidden on the Assign Resource to Project and Staffer Worksheet pages.</inlineHelpText>
        <label>Hide Custom Scheduling Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Ignore_Avail_Scheduling_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Calculate End Date Ignore Availability scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</description>
        <inlineHelpText>Indicates whether the Calculate End Date Ignore Availability scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
        <label>Hide Ignore Avail Scheduling Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Level_Schedule_Scheduling_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Calculate End Date Level Schedule scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</description>
        <inlineHelpText>Indicates whether the Calculate End Date Level Schedule scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
        <label>Hide Level Schedule Scheduling Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Percent_Alloc_Scheduling_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Percent Allocation scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</description>
        <inlineHelpText>Indicates whether the Percent Allocation scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
        <label>Hide Percent Alloc Scheduling Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Zero_Hour_Scheduling_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Zero Hour Schedule scheduling strategy is hidden on the Assign Resource to Project and Staffer Worksheet pages.</description>
        <inlineHelpText>Indicates whether the Zero Hour Schedule scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
        <label>Hide Zero Hour Scheduling Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Link_Assignment_Header_Tooltip_Fields__c</fullName>
        <defaultValue>&quot;Assignment_Number__c,Project__r.Name,Resource__r.Name,Is_Billable__c,Start_Date__c,End_Date__c,Scheduled_Hours__c&quot;</defaultValue>
        <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Assignment to Milestones page.</description>
        <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Assignment to Milestones page.</inlineHelpText>
        <label>Link Assignment Header Tooltip Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Link_Methodology_Header_Tooltip_Fields__c</fullName>
        <defaultValue>&quot;Name,project__r.name&quot;</defaultValue>
        <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Methodology to Assignments page.</description>
        <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Methodology to Assignments page.</inlineHelpText>
        <label>Link Methodology Header Tooltip Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Link_Milestone_Header_Tooltip_Fields__c</fullName>
        <defaultValue>&quot;Name,Target_Date__c,Milestone_Amount__c&quot;</defaultValue>
        <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Milestone to Assignments page.</description>
        <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Milestone to Assignments page.</inlineHelpText>
        <label>Link Milestone Header Tooltip Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Link_Phase_Header_Tooltip_Fields__c</fullName>
        <defaultValue>&quot;Name,project__r.name&quot;</defaultValue>
        <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Phase to Assignments page.</description>
        <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Phase to Assignments page.</inlineHelpText>
        <label>Link Phase Header Tooltip Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Mass_Assign_Milestone_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true the Milestone field is shown in the quick update section and assignment detail section of the Mass Assign Resources to Project page. The field is also shown on the Mass Assign Projects to Resource page.</description>
        <inlineHelpText>When true the Milestone field is shown in the quick update section and assignment detail section of the Mass Assign Resources to Project page. The field is also shown on the Mass Assign Projects to Resource page.</inlineHelpText>
        <label>Mass Assign Milestone Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Mass_Assign_Milestone_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true the Milestone field must be completed for each assignment to be created on the Mass Assign Projects to Resource page and the Mass Assign Resources to Project page.</description>
        <inlineHelpText>When true the Milestone field must be completed for each assignment to be created on the Mass Assign Projects to Resource page and the Mass Assign Resources to Project page.</inlineHelpText>
        <label>Mass Assign Milestone Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Mass_Assign_Projects_Load_Limit__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Controls how many projects are returned in the results when searching on the Mass Assign Projects To Resource page. Values higher than 2000 are not recommended due to risk of exceeding platform view state. Default value is 1000.</description>
        <inlineHelpText>Controls how many projects are returned in the results when searching on the Mass Assign Projects To Resource page. Values higher than 2000 are not recommended due to risk of exceeding platform view state. Default value is 1000.</inlineHelpText>
        <label>Mass Assign Projects Load Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Mass_Assign_Resources_Load_Limit__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>This setting has been deprecated and is no longer in use.</description>
        <inlineHelpText>This setting has been deprecated and is no longer in use.</inlineHelpText>
        <label>Deprecated: Mass Assign Res. Load Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Mass_Assignments_Default_Ignore_Holidays__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the Mass Assignment Ignore Holidays checkbox is checked by default.</description>
        <inlineHelpText>Determines whether the Mass Assignment Ignore Holidays checkbox is checked by default.</inlineHelpText>
        <label>Mass Assignments Default Ignore Holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Multi_Assign_Assignment_Fieldset_Name__c</fullName>
        <defaultValue>&quot;LinkMilestoneAssignmentColumns&quot;</defaultValue>
        <description>Allows users to create a custom fieldset on the Assignment object and write the fieldset&apos;s API name to this custom setting. Fields added to this fieldset are displayed as read-only fields on the Multi Assigned Assignment to Milestone UI.</description>
        <inlineHelpText>Allows users to create a custom fieldset on the Assignment object and write the fieldset&apos;s API name to this custom setting. Fields added to this fieldset are displayed as read-only fields on the Multi Assigned Assignment to Milestone UI.</inlineHelpText>
        <label>Multi Assign Assignment Fieldset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Multi_Assign_Milestone_Fieldset_Name__c</fullName>
        <defaultValue>&quot;LinkAssignmentMilestoneColumns&quot;</defaultValue>
        <description>Allows users to create a custom fieldset on the Milestone object and write the fieldset&apos;s API name to this custom setting. Fields added to this fieldset are displayed as read-only fields on the Multi Assigned Assignment to Milestone UI.</description>
        <inlineHelpText>Allows users to create a custom fieldset on the Milestone object and write the fieldset&apos;s API name to this custom setting. Fields added to this fieldset are displayed as read-only fields on the Multi Assigned Assignment to Milestone UI.</inlineHelpText>
        <label>Multi Assign Milestone Fieldset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Retain_schedule_exceptions_on_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, schedule exceptions are retained on update in the Edit Assignment Schedule screen. When false, exceptions are deleted. Default value is false.</description>
        <inlineHelpText>When true, schedule exceptions are retained on update in the Edit Assignment Schedule screen. When false, exceptions are deleted. Default value is false.</inlineHelpText>
        <label>Retain schedule exceptions on update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Role_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the Role pick list field is hidden from the Assign Resource(s) to Project page. If set to false, existing behavior continues. It will work only when &quot;Role Required on Creation&quot; checkbox is set to false</description>
        <inlineHelpText>If set to true, the Role pick list field is hidden from the Assign Resource(s) to Project page. If set to false, existing behavior continues.It will work only when &quot;Role Required on Creation&quot; checkbox is set to false</inlineHelpText>
        <label>Role Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Role_Required_On_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default false/UN-checked, current behavior continues (role pick list optional). If checked will make the Role pick list required and add the usual vertical red stripe to the left side of the field to indicate that it is required.</description>
        <label>Role Required On Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Statuses__c</fullName>
        <defaultValue>&apos;Submitted,Approved&apos;</defaultValue>
        <inlineHelpText>The comma-delimited list of the Timecard Status field values to use when performing timecard calculations for the Edit Assignment Schedule page.</inlineHelpText>
        <label>Timecard Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Update_Project_Monitor_Fields_Batch_Size__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>Determines the batch size to use when calculating Project Monitor fields.</description>
        <inlineHelpText>Determines the batch size to use when calculating Project Monitor fields.</inlineHelpText>
        <label>Update Project Monitor Fields Batch Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Update_Project_Monitor_Fields_Sync_Limit__c</fullName>
        <defaultValue>10000</defaultValue>
        <description>Defines the threshold number of assignments for immediately calculating Project Monitor fields. If the number of assignments exceeds the value of this setting, Project Monitor fields are calculated using a batch process.</description>
        <inlineHelpText>Defines the threshold number of assignments for immediately calculating Project Monitor fields. If the number of assignments exceeds the value of this setting, Project Monitor fields are calculated using a batch process.</inlineHelpText>
        <label>Update Project Monitor Fields Sync Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Use_Default_Cost_Rate_Clear_on_Assigning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the default value of the Use Default Cost Rate checkbox is unchecked on the Assign Resource to Project, Mass Assign Resources to Project and Mass Assign Projects To Resource pages.</description>
        <inlineHelpText>Indicates whether the default value of the Use Default Cost Rate checkbox is unchecked on the Assign Resource to Project, Mass Assign Resources to Project and Mass Assign Projects To Resource pages.</inlineHelpText>
        <label>Use Default Cost Rate Clear on Assigning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Scheduled_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use the value recorded in the Scheduled Days field on assignments for calculations on the Project Cost and Revenue Summary.</description>
        <inlineHelpText>Use the value recorded in the Scheduled Days field on assignments for calculations on the Project Cost and Revenue Summary.</inlineHelpText>
        <label>Use Scheduled Days for Calculations</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment Settings</label>
</CustomObject>